Add thesis plan.

--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -27,8 +27,78 @@
 \setcounter{page}{0}
 \clearpage
 
-\section{Thesis plan}
+\setcounter{section}{-1}
+\section{Introduction}
 
+The topic of the thesis will be HTML5 as an application platform for
+mobile and other devices. HTML5 and related APIs and modern browser
+functionality will be assessed as a cross-platform solution compared
+to developing applications with each platform's native tools.
 
+Smartphones have become a commodity in the last few years and
+therefore several platforms have gained significant share of the
+mobile phone market. A cross-platform solution is needed to reach all
+potential users of a service, and building a native application for
+each platform is very expensive. Furthermore, new platforms and form
+factors such as tablets or TVs also become possible targets of the
+service.
+
+The only common factor between different devices and platforms is the
+browser. Technologies used in web applications are well known and
+there are lots of developers around the world who are familiar in
+those technologies. Also, new browser APIs are being deployed to help
+build personal and contextual applications that match native ones in
+functionality, user experience, and performance.
+
+Still, these browser based APIs and technologies are still somewhat
+new, and performance and technology support varies between platforms
+and devices. The thesis will investigate the available APIs and their
+performance in modern smartphone platforms. The work will investigate
+especially the performance of the technologies compared to native
+applications and also touch the subject of hybrid applications with
+some parts built with web technology and others with native
+technologies.
+
+The goal is to define areas where web technologies perform well and
+areas where native code is needed. Differences between platforms are
+assessed keeping in mind the big promises of HTML5 as a
+cost-efficient, cross-platform solution for modern applications.
+
+The thesis will also present a modern architecture and useful tools
+for mobile web applications. Design considerations and possible
+compromises are also investigated in addition to best practices for
+high quality applications that can handle slow and flaky mobile
+networks and expensive data transfer rates.
+
+\section{Example application}
+
+Qt Developer Days mobile web application (
+\url{http://m.qtdevdays2011.qt.nokia.com/} ) is used as an example
+application. The app was developed by the author and it was used in
+two conferences: Dev Days Munich and Dev Days San Francisco.
+
+The application is built specifically for modern smartphones and
+tablets and it uses several of the latest HTML5 APIs.
+
+\section{Example library}
+
+JSONCache ( \url{http://kpuputti.github.com/JSONCache/} ) is a
+Javascript library to help data transfer in bad networks. The library
+uses HTML5 APIs to cache data and tries to download the data using
+several attempts to help dealing with short interruptions that occur
+often in mobile networks. The library was also developed by the
+author.
+
+\section{Work plan}
+
+The practical application was done in September/October 2011. Articles
+have been gathered in November and December and the writing will be
+started as soon as possible. January and February are used for
+full-time writing work. The goal is to finish writing the thesis in
+February.
+
+Experienced tutoring and support is provided by experts at
+Futurice. Prof. Petri Vuorimaa from Aalto University will be the
+supervisor or the work.
 
 \end{document}
