--- a/plan/toc.tex
+++ b/plan/toc.tex
@@ -24,13 +24,69 @@
 
 \maketitle
 \thispagestyle{empty}
-\setcounter{page}{0}
-\clearpage
 
-\setcounter{section}{-1}
+\clearpage
+\tableofcontents
 
 \section{Introduction}
 
+\section{Smartphone market}
 
+\subsection{Platforms}
+\subsection{Devices and form factors}
+\subsection{Native SDKs and App Stores}
+\subsection{Why cross-platform?}
+
+\section{HTML5}
+
+\subsection{History}
+\subsection{Semantic HTML5 markup}
+\subsection{Javascript APIs}
+\subsection{CSS3}
+\subsection{Related APIs}
+
+\section{Modern web applications}
+
+\subsection{Single-page applications}
+\subsubsection{Javascript MVC libraries}
+
+\subsection{Responsive design}
+\subsection{Progressive enhancement}
+
+\subsection{UI libraries}
+\subsubsection{jQuery Mobile}
+\subsubsection{jQTouch}
+\subsubsection{Sencha Touch}
+
+\subsection{Hybrid applications}
+\subsection{Wrapping web applications with PhoneGap}
+
+\section{Example application: Qt Developer Days conference schedule application}
+
+\subsection{Application architecture}
+\subsection{Used tools and libraries}
+\subsection{Used HTML5 APIs}
+
+\section{Developing applications with web technologies}
+
+\subsection{Targeting different screen resolutions and orientations}
+\subsection{Device detection}
+\subsection{Feature detection}
+\subsection{Accessing device APIs}
+\subsection{Personalizing by user context}
+
+\subsection{Handling mobile networks}
+\subsubsection{Minimizing data transfer with AJAX and JSON}
+\subsubsection{Offline APIs}
+\subsubsection{Caching}
+\subsubsection{Preloading}
+\subsubsection{Network interruptions}
+\subsubsection{Example library: JSONCache}
+
+\subsection{Animations and 3D}
+
+\section{Conclusions}
+
+\section{References}
 
 \end{document}
