Fix image titles.

--- a/coffee-exercise/coffee.tex
+++ b/coffee-exercise/coffee.tex
@@ -70,16 +70,21 @@ presented to programmers in the Futurice office.
 % Results
 \section{Results}
 
-
+The results presented in Appendix \ref{survey} and visualized in
+Appendix \ref{charts} show that approximately 73 \% of the developers
+surveyed drink coffee with an average of 3.2 cups a day.
 
 % Discussion
 \section{Discussion}
 
 % Problems:
+% - What numbers are the results compared to?
 % - How big is a cup?
 % - What if people drink several different drinks?
 % - Is Futurice employees representative of the Software Developer community?
 % - Is the surveyed sample representative of Futurice employees?
+
+
 
 \clearpage
 \appendix
