--- a/coffee-exercise/coffee.tex
+++ b/coffee-exercise/coffee.tex
@@ -38,7 +38,7 @@ about mathematicians:\\
 \textit{``A mathematician is a device for turning coffee into theorems.''}\\
 
 \noindent This quote has been widely applied to programmers as well in
-the form\\
+the form:\\
 
 \textit{``A programmer is a device for turning coffee into code.''}\\
 
@@ -62,8 +62,9 @@ The objective of this work is to answer the following questions:
 
 % Methods
 \section{Methods}
+\label{methods}
 
-The research question posed in Chapter \ref{rq} was answered by making
+The research question posed in Section \ref{rq} was answered by making
 a face-to-face user survey (see Appendix \ref{survey}). The survey was
 presented to programmers in the Futurice office.
 
@@ -84,7 +85,25 @@ surveyed drink coffee with an average of 3.2 cups a day.
 % - Is Futurice employees representative of the Software Developer community?
 % - Is the surveyed sample representative of Futurice employees?
 
+In this paper the myth of programmers being avid coffee drinkers was
+validated. The representative sample was taken in Futurice offices. It
+was noticed that a large portion of the surveyed developers do drink
+coffee and several cups per day, but there is no other data to compare
+with.
 
+Also, it is open to discussion whether the sample truly represents the
+software developer community because Futurice employees are younger
+than the average developers in the industry.
+
+Some future improvements were considered to the research methods
+defined in Section \ref{methods}:
+
+\begin{itemize}
+\item What is the definition of a cup?
+\item What if people drink different kinds of drinks on daily basis?
+\end{itemize}
+
+We leave these improvements for future research.
 
 \clearpage
 \appendix
