--- a/coffee-exercise/coffee.tex
+++ b/coffee-exercise/coffee.tex
@@ -103,7 +103,7 @@ defined in Section \ref{methods}:
 \item What if people drink different kinds of drinks on daily basis?
 \end{itemize}
 
-We leave these improvements for future research.
+\noindent We leave these improvements for future research.
 
 \clearpage
 \appendix
