--- a/thesis/thesis-example.tex
+++ b/thesis/thesis-example.tex
@@ -487,8 +487,8 @@ Thank you.
 % Appendices go here
 % ------------------------------------------------------------------
 % If you do not have appendices, comment out the following lines
-\appendix
-\input{appendices.tex}
+%\appendix
+%\input{appendices.tex}
 
 % End of document!
 % ------------------------------------------------------------------
