Remove acronyms file.

--- a/thesis/thesis-example.tex
+++ b/thesis/thesis-example.tex
@@ -170,7 +170,7 @@
 %\usepackage{supertabular}
 % Longtable provides a tabular environment that can span multiple
 % pages. This is used in the example acronyms file.
-\usepackage{longtable}
+%\usepackage{longtable}
 
 % The fancyhdr package allows you to set your the page headers
 % manually, and allows you to add separator lines and so on.
@@ -430,9 +430,9 @@ Thank you.
 % Use \cleardoublepage so that IF two-sided printing is used
 % (which is not often for masters theses), then the pages will still
 % start correctly on the right-hand side.
-\cleardoublepage
+%\cleardoublepage
 % Example acronyms are placed in a separate file, acronyms.tex
-\input{acronyms}
+%\input{acronyms}
 
 % Table of contents
 % ------------------------------------------------------------------
