Add Finnish to babel.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -92,7 +92,7 @@
 % going to use.
 % Examples of valid language codes: english (or USenglish), british,
 % finnish, swedish; and so on.
-\usepackage[english]{babel}
+\usepackage[finnish,english]{babel}
 
 
 % Font selection
