Change file encoding.

--- a/thesis/aalto-thesis.sty
+++ b/thesis/aalto-thesis.sty
@@ -186,7 +186,7 @@
 % ------------------------------------------------------------------
 % You may change these if you wish
 \ifthen{\equal{#1}{finnish}}{
-  \renewcommand{\ATTITLENAME}{Työn nimi}
+  \renewcommand{\ATTITLENAME}{TyÃ¶n nimi}
   \renewcommand{\ATTITLE}{\FTITLE}
   \renewcommand{\ATSUBTITLE}{\FSUBTITLE}
   \ifthenelse{\NUMSUPERVISORS = 1}%
@@ -197,19 +197,19 @@
     {\renewcommand{\ATINSTRUCTORNAME}{Ohjaajat}}
   \renewcommand{\ATSUPERVISOR}{\FSUPERVISOR}
   \renewcommand{\ATINSTRUCTOR}{\FINSTRUCTOR}
-  \renewcommand{\ATDATENAME}{Päiväys}
+  \renewcommand{\ATDATENAME}{PÃ¤ivÃ¤ys}
   \renewcommand{\ATDATE}{\FDATE}
-  \renewcommand{\ATTHESIS}{Diplomityö}
+  \renewcommand{\ATTHESIS}{DiplomityÃ¶}
   \renewcommand{\ATCITY}{Espoo}
   \renewcommand{\ATUNIV}{Aalto-yliopisto}
   \renewcommand{\ATSCHOOL}{Perustieteiden korkeakoulu}
   \renewcommand{\ATDEGREEPROG}{Tietotekniikan tutkinto-ohjelma} 
-  \renewcommand{\ATABSTRACTNAME}{DIPLOMITYÖN TIIVISTELMÄ}
+  \renewcommand{\ATABSTRACTNAME}{DIPLOMITYÃ–N TIIVISTELMÃ„}
   \renewcommand{\ATLOGO}{images/aalto-logo-fi}
-  \renewcommand{\ATAUTHORNAME}{Tekijä}
+  \renewcommand{\ATAUTHORNAME}{TekijÃ¤}
   \renewcommand{\ATKEYWORDSNAME}{Asiasanat}
   \renewcommand{\ATKEYWORDS}{\FKEYWORDS}
-  \renewcommand{\ATPAGESNAME}{Sivumäärä}  
+  \renewcommand{\ATPAGESNAME}{SivumÃ¤Ã¤rÃ¤}  
   \renewcommand{\ATLANGUAGE}{\FLANGUAGE}
   \renewcommand{\ATLANGUAGENAME}{Kieli}
   \renewcommand{\ATPROFSHIPNAME}{Professuuri}
@@ -224,8 +224,8 @@
   \renewcommand{\ATTITLE}{\STITLE}
   \renewcommand{\ATSUBTITLE}{\SSUBTITLE}
   \ifthenelse{\NUMSUPERVISORS = 1}%
-    {\renewcommand{\ATSUPERVISORNAME}{Övervakare}}%
-    {\renewcommand{\ATSUPERVISORNAME}{Övervakare}}
+    {\renewcommand{\ATSUPERVISORNAME}{Ã–vervakare}}%
+    {\renewcommand{\ATSUPERVISORNAME}{Ã–vervakare}}
   \ifthenelse{\NUMINSTRUCTORS = 1}%
     {\renewcommand{\ATINSTRUCTORNAME}{Handledare}}%
     {\renewcommand{\ATINSTRUCTORNAME}{Handledare}}
@@ -236,15 +236,15 @@
   \renewcommand{\ATTHESIS}{Diplomarbete}
   \renewcommand{\ATCITY}{Esbo}
   \renewcommand{\ATUNIV}{Aalto-universitetet}
-  \renewcommand{\ATSCHOOL}{Högskolan för teknikvetenskaper}
-  \renewcommand{\ATDEGREEPROG}{Examensprogram för datateknik} 
+  \renewcommand{\ATSCHOOL}{HÃ¶gskolan fÃ¶r teknikvetenskaper}
+  \renewcommand{\ATDEGREEPROG}{Examensprogram fÃ¶r datateknik} 
   \renewcommand{\ATABSTRACTNAME}{SAMMANDRAG AV DIPLOMARBETET}
   \renewcommand{\ATLOGO}{images/aalto-logo-se}
-  \renewcommand{\ATAUTHORNAME}{Utfört av}
+  \renewcommand{\ATAUTHORNAME}{UtfÃ¶rt av}
   \renewcommand{\ATKEYWORDSNAME}{Nyckelord}
   \renewcommand{\ATKEYWORDS}{\SKEYWORDS}
   \renewcommand{\ATPAGESNAME}{Sidantal}  
-  \renewcommand{\ATLANGUAGENAME}{Språk}
+  \renewcommand{\ATLANGUAGENAME}{SprÃ¥k}
   \renewcommand{\ATLANGUAGE}{\SLANGUAGE}
   \renewcommand{\ATPROFSHIPNAME}{Professur}
   \renewcommand{\ATPROFCODENAME}{Kod}
