Add fixme annotation.

--- a/thesis/aalto-thesis.sty
+++ b/thesis/aalto-thesis.sty
@@ -169,7 +169,7 @@
   \renewcommand{\ATCITY}{Espoo}
   \renewcommand{\ATUNIV}{Aalto University}
   \renewcommand{\ATSCHOOL}{School of Science}
-  \renewcommand{\ATDEGREEPROG}{Degree Programme of Computer Science and Engineering}
+  \renewcommand{\ATDEGREEPROG}{\fixme{Set degree program}}
   \renewcommand{\ATABSTRACTNAME}{ABSTRACT OF MASTER'S THESIS}
   \renewcommand{\ATLOGO}{images/aalto-logo-en}
   \renewcommand{\ATAUTHORNAME}{Author}
