Add basics to exercise.

--- a/thesis-exercise/exercise.tex
+++ b/thesis-exercise/exercise.tex
@@ -30,22 +30,57 @@
 % Introduction
 \section{Introduction}
 
+\begin{itemize}
+\item The Web is integrated to our daily lives
+\item The Web is accessed (for consuming and producing information)
+  from everywhere with a ton of different devices
+\end{itemize}
 
+\noindent Principles of the Web:
+
+\begin{itemize}
+\item The Web is ubiquitous
+\item The Web is universal
+\item The Web should be open
+\item The Web should be accessible for anyone, anywhere, anytime
+\item Resources on the Web should be linkable by anyone from anywhere
+\end{itemize}
+
+\noindent Native apps are popular, but being cross-platform is
+essential. Smart phones and tablets are everywhere.
 
 % Research Question
 \section{Research Question}
 
-
+\begin{itemize}
+\item What HTML5?
+\item Why HTML5?
+\item How HTML5?
+  \begin{itemize}
+  \item How to handle flaky network connections?
+  \item How to make apps blazing fast?
+  \item How to make the apps responsive?
+  \item How to attack different screen sizes?
+  \item How to achieve cross-platform support?
+  \end{itemize}
+\item Promises and hype are big, but what are the realities and
+  real-world performance?
+\end{itemize}
 
 % Methods
 \section{Methods}
 
-
+We created the Qt Developer Days 2011 conference mobile website for
+schedule management and session information and rating. The website
+has offline support, stores persistent user-specific data in the
+client side HTML5 localStorage and scales to different screen sizes.
 
 % Results
 \section{Results}
 
-
+We created a cross-platform website for mobile phones and tablets
+running on several different platforms. Design compromises were made
+to achieve cross-platform support.
 
 % Discussion
 \section{Discussion}
