Add bib entries.

--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -29,3 +29,38 @@
   publisher={O'Reilly Media},
   isbn={0596806027}
 }
+@book{crockford2008javascript,
+  title={JavaScript: the good parts},
+  author={Crockford, D.},
+  year={2008},
+  publisher={O'Reilly Media, Inc.},
+  isbn={0596517742}
+}
+@book{souders2007high,
+  title={High Performance Web Sites: Essential Knowledge for Front-End Engineers},
+  author={Souders, S.},
+  year={2007},
+  publisher={O'Reilly Media},
+  isbn={0596529309}
+}
+@book{souders2009even,
+  title={Even Faster Web Sites: Performance Best Practices for Web Developers},
+  author={Souders, S.},
+  year={2009},
+  publisher={O'Reilly Media},
+  isbn={0596522304}
+}
+@book{zakas2010high,
+  title={High Performance JavaScript (Build Faster Web Application Interfaces)},
+  author={Zakas, N.},
+  year={2010},
+  publisher={O'Reilly Media},
+  isbn={059680279X}
+}
+@article{garrett2005ajax,
+  title={Ajax: A new approach to web applications},
+  author={Garrett, J.J. and others},
+  journal={Adaptive path},
+  volume={18},
+  year={2005}
+}
