--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -27,35 +27,35 @@
   author={Pilgrim, M.},
   year={2010},
   publisher={O'Reilly Media},
-  isbn={0596806027}
+  isbn={978-0-596-80602-6}
 }
 @book{crockford2008javascript,
   title={JavaScript: the good parts},
   author={Crockford, D.},
   year={2008},
   publisher={O'Reilly Media, Inc.},
-  isbn={0596517742}
+  isbn={978-0-596-51774-8}
 }
 @book{souders2007high,
   title={High Performance Web Sites: Essential Knowledge for Front-End Engineers},
   author={Souders, S.},
   year={2007},
   publisher={O'Reilly Media},
-  isbn={0596529309}
+  isbn={978-0-596-52930-7}
 }
 @book{souders2009even,
   title={Even Faster Web Sites: Performance Best Practices for Web Developers},
   author={Souders, S.},
   year={2009},
   publisher={O'Reilly Media},
-  isbn={0596522304}
+  isbn={978-0-596-52230-8}
 }
 @book{zakas2010high,
   title={High Performance JavaScript (Build Faster Web Application Interfaces)},
   author={Zakas, N.},
   year={2010},
   publisher={O'Reilly Media},
-  isbn={059680279X}
+  isbn={978-0-596-80279-0}
 }
 @article{garrett2005ajax,
   title={Ajax: A new approach to web applications},
