Capitalize titles and drop subtitles.

--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -23,35 +23,35 @@
   organization={IEEE}
 }
 @book{pilgrim2010html5,
-  title={HTML5: up and running},
+  title={HTML5: Up And Running},
   author={Pilgrim, M.},
   year={2010},
   publisher={O'Reilly Media},
   isbn={978-0-596-80602-6}
 }
 @book{crockford2008javascript,
-  title={JavaScript: the good parts},
+  title={JavaScript: The Good Parts},
   author={Crockford, D.},
   year={2008},
   publisher={O'Reilly Media, Inc.},
   isbn={978-0-596-51774-8}
 }
 @book{souders2007high,
-  title={High Performance Web Sites: Essential Knowledge for Front-End Engineers},
+  title={High Performance Web Sites},
   author={Souders, S.},
   year={2007},
   publisher={O'Reilly Media},
   isbn={978-0-596-52930-7}
 }
 @book{souders2009even,
-  title={Even Faster Web Sites: Performance Best Practices for Web Developers},
+  title={Even Faster Web Sites},
   author={Souders, S.},
   year={2009},
   publisher={O'Reilly Media},
   isbn={978-0-596-52230-8}
 }
 @book{zakas2010high,
-  title={High Performance JavaScript (Build Faster Web Application Interfaces)},
+  title={High Performance JavaScript},
   author={Zakas, N.},
   year={2010},
   publisher={O'Reilly Media},
