--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -33,7 +33,7 @@
   title={JavaScript: The Good Parts},
   author={Crockford, D.},
   year={2008},
-  publisher={O'Reilly Media, Inc.},
+  publisher={O'Reilly Media / Yahoo Press},
   isbn={978-0-596-51774-8}
 }
 @book{souders2007high,
@@ -54,7 +54,7 @@
   title={High Performance JavaScript},
   author={Zakas, N.},
   year={2010},
-  publisher={O'Reilly Media},
+  publisher={O'Reilly Media / Yahoo Press},
   isbn={978-0-596-80279-0}
 }
 @article{garrett2005ajax,
