Remove URL note.

--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -63,6 +63,5 @@
   journal={Adaptive path},
   volume={18},
   year={2005},
-  url={\url{http://www.adaptivepath.com/ideas/ajax-new-approach-web-applications}},
-  note="[Online; accessed 4-January-2012]"
+  url={\url{http://www.adaptivepath.com/ideas/ajax-new-approach-web-applications}}
 }
