Add thesis file outline.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -465,7 +465,14 @@ Thank you.
 % Edit the content in these files, rename them as necessary.
 % ------------------------------------------------------------------
 
-\fixme{Include input tex files.}
+\input{introduction.tex}
+\input{research-question.tex}
+\input{methods.tex}
+\input{results.tex}
+\input{discussion.tex}
+
+% LaTeX test file.
+\input{test.tex}
 
 % Load the bibliographic references
 % ------------------------------------------------------------------
