Fix ref capitalization.

--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -9,13 +9,13 @@
   publisher={Nature Publishing Group}
 }
 @inproceedings{mikkonen2011apps,
-  title={Apps vs. Open Web: The Battle of the Decade},
+  title={{A}pps vs. {O}pen {W}eb: {T}he {B}attle of the {D}ecade},
   author={Mikkonen, T. and Taivalsaari, A.},
   year={2011},
   booktitle={2nd Annual Workshop on Software Engineering for Mobile Application Development}
 }
 @inproceedings{taivalsaari2011web,
-  title={The Web as an Application Platform: The Saga Continues},
+  title={{T}he {W}eb as an {A}pplication {P}latform: {T}he {S}aga {C}ontinues},
   author={Taivalsaari, A. and Mikkonen, T.},
   booktitle={Software Engineering and Advanced Applications (SEAA), 2011 37th EUROMICRO Conference on},
   pages={170--174},
@@ -52,14 +52,14 @@
 }
 @book{zakas2010high,
   title={High Performance JavaScript},
-  author={Zakas, N.},
+  author={Zakas, N. C.},
   year={2010},
   publisher={O'Reilly Media / Yahoo Press},
   isbn={978-0-596-80279-0}
 }
 @article{garrett2005ajax,
-  title={Ajax: A new approach to web applications},
-  author={Garrett, J.J. and others},
+  title={Ajax: A New Approach to Web Applications},
+  author={Garrett, J. J.},
   journal={Adaptive path},
   volume={18},
   year={2005},
