--- a/thesis/test.tex
+++ b/thesis/test.tex
@@ -7,6 +7,8 @@
 \item Mikkonen \& Taivalsaari \cite{mikkonen2011apps}
 \item Taivalsaari \& Mikkonen \cite{taivalsaari2011web}
 \item Pilgrim \cite{pilgrim2010html5}
+\item Crockford \cite{crockford2008javascript}
 \item Souders \cite{souders2007high}
 \item Garrett \cite{garrett2005ajax}
+\item Zakas \cite{zakas2010high}
 \end{itemize}
