Add more sections for outline.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -1,2 +1,29 @@
-\chapter{Results}
+\chapter{Results: What Was Good and Where Were the Compromises}
 \label{chapter:results}
+
+\section{Targeting Different Platforms}
+\label{section:targeting-platforms}
+
+\subsection{Device Detection}
+\subsection{Feature Detection}
+
+\section{Targeting Different Screens}
+\label{section:targeting-screens}
+
+\section{Handling Mobile Networks}
+\label{section:handling-networks}
+
+\subsection{Minimizing Data Transfer}
+\subsection{Caching}
+\subsection{Preloading}
+\subsection{Offline Support}
+\subsection{Handling Interruptions}
+
+\section{Graphics and Animations}
+\label{section:graphics}
+
+\section{Performance Analysis}
+\label{section:performance-analysis}
+
+\subsection{YSlow}
+\subsection{PageSpeed}
