--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -465,6 +465,7 @@ Thank you.
 % Edit the content in these files, rename them as necessary.
 % ------------------------------------------------------------------
 
+\input{gitinfo.tex}
 \input{introduction.tex}
 \input{research-question.tex}
 \input{methods.tex}
