--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,2 +1,61 @@
-\chapter{Introduction}
+\chapter{Introduction: Smartphone Market and the Need for Cross-Platform Support}
 \label{chapter:introduction}
+
+\section{Smartphone Landscape}
+\label{section:smartphone-landscape}
+
+\section{HTML5}
+\label{section:html5}
+
+\subsection{History}
+\subsection{Markup}
+\subsection{CSS3}
+\subsection{JavaScript APIs}
+\subsection{Related APIs}
+
+\section{Modern Mobile Web Application Architecture}
+\label{section:modern-mobile-web}
+
+\subsection{Single-Page applications}
+\subsubsection{JavaScript MVC Libraries}
+
+\subsection{Responsive Design}
+\subsection{Progressive Enhancement}
+
+\subsection{UI Libraries}
+\subsubsection{jQuery Mobile}
+\subsubsection{jQTouch}
+\subsubsection{Sencha Touch}
+
+\subsection{Hybrid Applications}
+\subsection{Wrapping Web Applications Application Stores}
+
+\section{Performance Guidelines}
+\label{section:performance-guidelines}
+
+\subsection{Make Fewer HTTP Requests}
+\subsection{Use a Content Delivery Network}
+\subsection{Add an Expires Header}
+\subsection{Gzip Components}
+\subsection{Put Stylesheets at the Top}
+\subsection{Put Scripts at the Bottom}
+\subsection{Avoid CSS Expressions}
+\subsection{Make Javascript and CSS External}
+\subsection{Reduce DNS Lookups}
+\subsection{Minify JavaScript}
+\subsection{Avoid Redirects}
+\subsection{Remove Duplicate Scripts}
+\subsection{Configure ETags}
+\subsection{Make Ajax Cacheable}
+\subsection{Splitting the Initial Payload}
+\subsection{Loading Scripts Without Blocking}
+\subsection{Coupling Asynchronous Scripts}
+\subsection{Positioning Inline Scripts}
+\subsection{Writing Efficient JavaScript}
+\subsection{Scaling with Comet}
+\subsection{Going Beyond Gzipping}
+\subsection{Optimizing Images}
+\subsection{Sharding Dominant Domains}
+\subsection{Flushing the Document Early}
+\subsection{Using Iframes Sparingly}
+\subsection{Simplifying CSS Selectors}
