--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -1,2 +1,8 @@
-\chapter{Methods}
+\chapter{Methods: Example Application and Library}
 \label{chapter:methods}
+
+\section{Qt Developer Days 2011 Conference Schedule Application}
+\label{section:devdays}
+
+\section{JSONCache JavaScript Library}
+\label{section:jsoncache}
