Add build time to git info.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -220,6 +220,8 @@
 %\usepackage[mydraft,doublenumbering]{aalto-thesis}
 %\usepackage{aalto-thesis}
 
+% Own includes
+\usepackage{datetime}
 
 % Hyperref
 % ------------------------------------------------------------------
