Add jsoncache screenshot and abbr command.

--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -6,3 +6,14 @@
 
 \section{JSONCache JavaScript Library}
 \label{section:jsoncache}
+
+JSONCache is a lightweight JavaScript library for fetching \abbr{JSON}
+data in flaky networks.
+
+\begin{figure}[ht]
+  \begin{center}
+    \includegraphics[width=\textwidth]{images/jsoncache-demo.png}
+    \caption{Interactive JSONCache demo.}
+    \label{figure:jsoncache-demo.png}
+  \end{center}
+\end{figure}
