--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -293,6 +293,7 @@
 % \newcommand{\COVERINSTRUCTOR}{Olli Ohjaaja M.Sc. (Tech.), Aalto University\\
 %  Elli Opas M.Sc. (Tech), Aalto SCI}
 
+\newcommand{\abbr}[1] {#1 (\fixme{abbreviation definition})}
 
 % Other stuff
 % ------------------------------------------------------------------
