Add JSONCache section.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -293,7 +293,10 @@
 % \newcommand{\COVERINSTRUCTOR}{Olli Ohjaaja M.Sc. (Tech.), Aalto University\\
 %  Elli Opas M.Sc. (Tech), Aalto SCI}
 
+% \abbr
 \newcommand{\abbr}[1] {#1 (\fixme{abbreviation definition})}
+% \citationneeded
+\newcommand{\citationneeded} { (\fixme{citation needed}) }
 
 % Other stuff
 % ------------------------------------------------------------------
