Change perf rules into a list.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -33,29 +33,31 @@
 \section{Performance Guidelines}
 \label{section:performance-guidelines}
 
-\subsection{Make Fewer HTTP Requests}
-\subsection{Use a Content Delivery Network}
-\subsection{Add an Expires Header}
-\subsection{Gzip Components}
-\subsection{Put Stylesheets at the Top}
-\subsection{Put Scripts at the Bottom}
-\subsection{Avoid CSS Expressions}
-\subsection{Make Javascript and CSS External}
-\subsection{Reduce DNS Lookups}
-\subsection{Minify JavaScript}
-\subsection{Avoid Redirects}
-\subsection{Remove Duplicate Scripts}
-\subsection{Configure ETags}
-\subsection{Make Ajax Cacheable}
-\subsection{Splitting the Initial Payload}
-\subsection{Loading Scripts Without Blocking}
-\subsection{Coupling Asynchronous Scripts}
-\subsection{Positioning Inline Scripts}
-\subsection{Writing Efficient JavaScript}
-\subsection{Scaling with Comet}
-\subsection{Going Beyond Gzipping}
-\subsection{Optimizing Images}
-\subsection{Sharding Dominant Domains}
-\subsection{Flushing the Document Early}
-\subsection{Using Iframes Sparingly}
-\subsection{Simplifying CSS Selectors}
+\begin{itemize}
+\item Make Fewer HTTP Requests
+\item Use a Content Delivery Network
+\item Add an Expires Header
+\item Gzip Components
+\item Put Stylesheets at the Top
+\item Put Scripts at the Bottom
+\item Avoid CSS Expressions
+\item Make Javascript and CSS External
+\item Reduce DNS Lookups
+\item Minify JavaScript
+\item Avoid Redirects
+\item Remove Duplicate Scripts
+\item Configure ETags
+\item Make Ajax Cacheable
+\item Splitting the Initial Payload
+\item Loading Scripts Without Blocking
+\item Coupling Asynchronous Scripts
+\item Positioning Inline Scripts
+\item Writing Efficient JavaScript
+\item Scaling with Comet
+\item Going Beyond Gzipping
+\item Optimizing Images
+\item Sharding Dominant Domains
+\item Flushing the Document Early
+\item Using Iframes Sparingly
+\item Simplifying CSS Selectors
+\end{itemize}
