--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -294,9 +294,9 @@
 %  Elli Opas M.Sc. (Tech), Aalto SCI}
 
 % \abbr
-\newcommand{\abbr}[1] {#1 (\fixme{abbreviation definition})}
+\newcommand{\abbr}[1] {#1 (?)}
 % \citationneeded
-\newcommand{\citationneeded} { (\fixme{citation needed}) }
+\newcommand{\citationneeded} {(citation needed)}
 
 % Other stuff
 % ------------------------------------------------------------------
