--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -66,3 +66,13 @@
   note={Available at: \url{http://www.adaptivepath.com/ideas/ajax-new-approach-web-applications}. Accessed 5-January-2012},
   url={\url{http://www.adaptivepath.com/ideas/ajax-new-approach-web-applications}}
 }
+@article{charland2011mobile,
+  title={{M}obile {A}pplication {D}evelopment: {W}eb vs. {N}ative},
+  author={Charland, A. and Leroux, B.},
+  journal={Communications of the ACM},
+  volume={54},
+  number={5},
+  pages={49--53},
+  year={2011},
+  publisher={ACM}
+}
