Add platform skills table and devdays architecture img.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -4,6 +4,24 @@
 \section{Smartphone Landscape}
 \label{section:smartphone-landscape}
 
+\begin{table}
+  \begin{tabular}{ l | l }
+    \textbf{Mobile OS Type} & \textbf{Skill Set Required} \\
+    \hline
+    Apple iOS & C, Objective C \\
+    Google Android & Java (Harmony flavored, Dalvik VM) \\
+    RIM BlackBerry & Java (J2ME flavored) \\
+    Symbian & C, C++, Python, HTML/CSS/JS \\
+    Windows Mobile & .NET \\
+    Windows 7 Phone & .NET \\
+    HP Palm webOS & HTML/CSS/JS \\
+    MeeGo & C, C++, HTML/CSS/JS \\
+    Samsung bada & C++
+  \end{tabular}
+  \label{table:native-skills}
+  \caption{Required skill sets for different mobile platforms. \cite{charland2011mobile}}
+\end{table}
+
 \section{HTML5}
 \label{section:html5}
 
