--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -44,6 +44,14 @@ and screen sizes. The layout adjusts to the available space and
 provides rich interactive components. Integration to social networking
 services was also added to the application.
 
+\begin{figure}[ht]
+  \begin{center}
+    \includegraphics[width=\textwidth]{images/devdays.png}
+    \caption{Conference schedule application architecture.}
+    \label{figure:devdays.png}
+  \end{center}
+\end{figure}
+
 \section{JSONCache JavaScript Library}
 \label{section:jsoncache}
 
