Add HTML5 mobile app anatomy figure.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -34,6 +34,12 @@
 \section{Modern Mobile Web Application Architecture}
 \label{section:modern-mobile-web}
 
+\begin{figure}[ht]
+  \includegraphics[width=\textwidth]{images/anatomy-of-a-html5-mobile-app.png}
+  \caption{HTML5 Mobile Application Anatomy \citationneeded}
+  \label{figure:anatomy-of-a-html5-mobile-app.png}
+\end{figure}
+
 \subsection{Single-Page applications}
 \subsubsection{JavaScript MVC Libraries}
 
