--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -54,34 +54,116 @@
 \subsection{Hybrid Applications}
 \subsection{Wrapping Web Applications Application Stores}
 
+\clearpage
 \section{Performance Guidelines}
 \label{section:performance-guidelines}
 
+\fixme{Add intro to sources and reasoning why frontend performance
+  matters. \cite{souders2007high, souders2009even}}
+
 \begin{itemize}
-\item Make Fewer HTTP Requests
-\item Use a Content Delivery Network
-\item Add an Expires Header
-\item Gzip Components
-\item Put Stylesheets at the Top
-\item Put Scripts at the Bottom
-\item Avoid CSS Expressions
-\item Make Javascript and CSS External
-\item Reduce DNS Lookups
-\item Minify JavaScript
-\item Avoid Redirects
-\item Remove Duplicate Scripts
-\item Configure ETags
-\item Make Ajax Cacheable
-\item Splitting the Initial Payload
-\item Loading Scripts Without Blocking
-\item Coupling Asynchronous Scripts
-\item Positioning Inline Scripts
-\item Writing Efficient JavaScript
-\item Scaling with Comet
-\item Going Beyond Gzipping
-\item Optimizing Images
-\item Sharding Dominant Domains
-\item Flushing the Document Early
-\item Using Iframes Sparingly
-\item Simplifying CSS Selectors
+\item \textbf{Make Fewer HTTP Requests}
+
+
+
+\item \textbf{Use a Content Delivery Network}
+
+
+
+\item \textbf{Add an Expires Header}
+
+
+
+\item \textbf{Gzip Components}
+
+
+
+\item \textbf{Put Stylesheets at the Top}
+
+
+
+\item \textbf{Put Scripts at the Bottom}
+
+
+
+\item \textbf{Avoid CSS Expressions}
+
+
+
+\item \textbf{Make Javascript and CSS External}
+
+
+
+\item \textbf{Reduce DNS Lookups}
+
+
+
+\item \textbf{Minify JavaScript}
+
+
+
+\item \textbf{Avoid Redirects}
+
+
+
+\item \textbf{Remove Duplicate Scripts}
+
+
+
+\item \textbf{Configure ETags}
+
+
+
+\item \textbf{Make Ajax Cacheable}
+
+
+
+\item \textbf{Splitting the Initial Payload}
+
+
+
+\item \textbf{Loading Scripts Without Blocking}
+
+
+
+\item \textbf{Coupling Asynchronous Scripts}
+
+
+
+\item \textbf{Positioning Inline Scripts}
+
+
+
+\item \textbf{Writing Efficient JavaScript}
+
+
+
+\item \textbf{Scaling with Comet}
+
+
+
+\item \textbf{Going Beyond Gzipping}
+
+
+
+\item \textbf{Optimizing Images}
+
+
+
+\item \textbf{Sharding Dominant Domains}
+
+
+
+\item \textbf{Flushing the Document Early}
+
+
+
+\item \textbf{Using Iframes Sparingly}
+
+
+
+\item \textbf{Simplifying CSS Selectors}
+
+
+
 \end{itemize}
