--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -76,3 +76,16 @@
   year={2011},
   publisher={ACM}
 }
+@article{http1.0rfc,
+  title={RFC 1945: Hypertext Transfer Protocol—HTTP/1.0, May 1996},
+  author={Berners-Lee, T. and Fielding, R. and Frystyk, H.},
+  journal={Status: INFORMATIONAL},
+  url={http://www.ietf.org/rfc/rfc1945.txt}
+}
+@article{http1.1rfc,
+  title={RFC 2616: Hypertext transfer protocol--HTTP/1.1, June 1999},
+  author={Fielding, R. and Gettys, J. and Mogul, J. and Frystyk, H. and Masinter, L. and Leach, P. and Berners-Lee, T.},
+  journal={Status: Standards Track},
+  year={1999},
+  url={http://www.ietf.org/rfc/rfc2616.txt}
+}
